--- a/View/v_css/homeStyle.css
+++ b/View/v_css/homeStyle.css
@@ -1,12 +1,44 @@
-h2 {
-    background-color: skyblue;
-    display: block;
-    padding: 10px;
-    
+body{
+  margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
-button {
-    color: black;
-    background-color: bisque;
-    padding: 10px;
+h2{
+  background-color: skyblue;
+  margin: 0;
+  padding: 15px;
+  text-align: center;
+}
+
+.button-wrapper{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+ 
+}
+
+.btn{
+  color: black;
+  background-color: bisque;
+  font-weight: bolder;
+  padding: 12px 16px;
+  border: 2px solid brown;
+}
+
+.btn:hover{
+  background-color: brown;
+  color:bisque;
+}
+
+
+.row{
+  display: flex;
+  gap: 19px;           
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;     
 }
