--- a/View/v_css/homeStyle.css
+++ b/View/v_css/homeStyle.css
@@ -1,44 +1,108 @@
-body{
+body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  background-color: lightcyan ;
+  
 }
 
-h2{
-  background-color: skyblue;
+h1 {
+  background-color: rgb(25, 93, 119);
   margin: 0;
-  padding: 15px;
+  padding: 0px;
   text-align: center;
+  color: white;
 }
 
-.button-wrapper{
+h3 {
+  background-color: rgb(25, 93, 119);
+  margin: 0;
+  padding: 3px;
+  text-align: center;
+  color: rgb(174, 211, 227);
+}
+
+article p {
+  text-align: center;
+  padding: 10px;
+}
+
+span {
+    color: rgb(50, 84, 140);
+    font-weight: bolder;
+}
+
+.button-wrapper {
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 5px;
- 
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.btn{
+.btn {
   color: black;
-  background-color: bisque;
+  background-color: lightblue;
   font-weight: bolder;
   padding: 12px 16px;
-  border: 2px solid brown;
+  border: 2px solid darkblue;
 }
 
-.btn:hover{
-  background-color: brown;
-  color:bisque;
+.btn:hover {
+  background-color: darkcyan;
+  color: lightcyan;
 }
 
-
-.row{
+.row {
   display: flex;
   gap: 19px;           
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;     
+}
+
+p {
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.reviews-container {
+    text-align: center;
+    padding: 20px;
+    background-color: lightcyan;
+    
+}
+
+.reviews-container h2 {
+    color: rgb(25, 93, 119);
+}
+
+.review-box {
+    display: inline-block; 
+    width: 200px;
+    margin: 10px;
+    padding: 10px;
+    background-color: lightblue;
+    border: 1px solid darkblue;
+    vertical-align: top;
+}
+
+footer {
+    background-color: rgb(25, 93, 119);
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin-top: auto;
+}
+
+footer p {
+    margin: 5px 0;
+}
+
+h2{
+  border: 2px solid darkblue;
 }
